--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,12 +8,12 @@
 
     <title>FIFA World Cup - Betting application</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Custom styles for this template -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/loading-bar.min.css" rel="stylesheet" media='all' >
-    <link href="css/app.css" rel="stylesheet">
     <link href="css/bracket.css" rel="stylesheet">
-    <!-- <link href="css/matchlist-header.css" rel="stylesheet"> -->
+    <link href="css/angular-growl.min.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
+
     <style type="text/css">
         [ng\:cloak], [ng-cloak], .ng-cloak {
             display: none !important;
@@ -24,7 +24,9 @@
 
 <body data-ng-app="worldcup" class="ng-cloak">
     <div data-ui-view="navbar"></div>
-    <!--<div id="loading-bar-container"></div>-->
+
+    <div growl limit-messages="3"></div>
+
     <div class="container main">
         <div class="container" ui-view="content"></div>
     </div>
@@ -42,6 +44,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
     <script src="js/loading-bar.min.js" type="text/javascript"></script>
+    <script src="js/angular-growl.min.js" type="text/javascript"></script>
 
     <!-- create the app module first -->
     <script src="app.js"></script>
