--- a/src/main/resources/static/app/bets/bets.view.html
+++ b/src/main/resources/static/app/bets/bets.view.html
@@ -9,6 +9,22 @@
             <form class="form-horizontal" action="">
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="firstStageMatchesList">First Stage Matches:</label>
+
+
+
+                    <ui-select ng-model="selected.match" theme="select2"   title="Choose a match">
+                        <ui-select-match placeholder="Select a match in the list or search">{{$selected.match.label}}</ui-select-match>
+                        <ui-select-choices group-by="'groupId'" repeat="match in matchesData.firstStage | propsFilter: {matchId: $select.search}">
+                            <div ng-bind-html="match.label | highlight: $select.search"></div>
+                            <small>
+                                id: {{match.id}}
+                                label: <span ng-bind-html="''+match.label | highlight: $select.search"></span>
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+
+
+
                     <div class="col-sm-10">
                         <select id="firstStageMatchesList"
                                 class="form-control"
