--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
     <link href="css/loading-bar.min.css" rel="stylesheet" media='all' >
     <link href="css/bracket.css" rel="stylesheet">
     <link href="css/angular-growl.min.css" rel="stylesheet">
+    <link href="css/select.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 
     <style type="text/css">
@@ -45,6 +46,7 @@
     <script src="js/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
     <script src="js/loading-bar.min.js" type="text/javascript"></script>
     <script src="js/angular-growl.min.js" type="text/javascript"></script>
+    <script src="js/select.min.js" type="text/javascript"></script>
 
     <!-- create the app module first -->
     <script src="app.js"></script>
