--- a/src/main/resources/static/app/register/register.view.html
+++ b/src/main/resources/static/app/register/register.view.html
@@ -1,59 +1,71 @@
 <div class="jumbotron">
-    <h3>Register Here!</h3>
+  <h3>Register Here!</h3>
 
-    <div class="row">
-        <div class="col-md-6">
-            <form name="registrationForm" role="form" ng-submit="submit()">
+  <div class="row">
+    <div class="col-md-6">
+      <form name="registrationForm" role="form" ng-submit="submit()">
 
-                <div style="margin-bottom: 25px" class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input class="form-control" type="text" name="firstname" id="firstname" placeholder="First Name"
-                           ng-model="registerData.firstName" required/>
-                </div>
-
-                <div style="margin-bottom: 25px" class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input class="form-control" type="text" name="lastname" id="lastname" placeholder="Last Name"
-                           ng-model="registerData.lastName" required/>
-                </div>
-
-                <div style="margin-bottom: 25px" class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                    <input class="form-control" type="email" name="email" id="email" placeholder="Email"
-                           ng-model="registerData.email" ng-disabled="registerData.action != 'Register'" required/>
-                </div>
-
-                <div style="margin-bottom: 25px" class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input class="form-control" type="password" name="password" id="password" placeholder="Password"
-                           ng-model="registerData.password" minlength="4" maxlength="16" required/>
-                </div>
-
-                <div style="margin-bottom: 25px;" class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input class="form-control" type="password" name="passwordConfirm" id="passwordConfirm"
-                           placeholder="Password confirmation"
-                           ng-model="registerData.passwordConfirm"
-                           ng-pattern="registerData.password"
-                           required/>
-                    <span class="input-group-addon alert-warning"
-                         ng-show="registrationForm.passwordConfirm.$dirty && registrationForm.passwordConfirm.$invalid">Passwords don't match</span>
-                </div>
-
-
-                <div style="margin-bottom: 25px;" class="form-group" ng-show="registerData.action=='Register'">
-                    <div  style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
-                        You will receive an email to complete the registration and validation process. Be sure
-                            to check your spam folders. Already registered? <a href="#/login/">Login in Here</a>
-                    </div>
-                </div>
-
-
-                <div style="margin-top: 25px;" class="form-group">
-                    <input class="btn btn-success" type="submit" ng-value="registerData.action" ng-disabled="registrationForm.$invalid">
-                </div>
-
-            </form>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <input class="form-control" type="text" name="firstname" id="firstname"
+                 placeholder="First Name"
+                 ng-model="registerData.firstName" required/>
         </div>
+
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <input class="form-control" type="text" name="lastname" id="lastname"
+                 placeholder="Last Name"
+                 ng-model="registerData.lastName" required/>
+        </div>
+
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+          <input class="form-control" type="email" name="email" id="email" placeholder="Email"
+                 ng-model="registerData.email" ng-disabled="registerData.action != 'Register'"
+                 required/>
+          <span class="input-group-addon"
+                popover-placement="top-right"
+                popover-trigger="'outsideClick'"
+                popover-title="Registration limitations"
+                uib-popover-html="'Registration is limited to <b>bnymellon.com</b> domain only'">
+            <i class="glyphicon glyphicon-info-sign"></i></span>
+        </div>
+
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+          <input class="form-control" type="password" name="password" id="password"
+                 placeholder="Password"
+                 ng-model="registerData.password" minlength="4" maxlength="16" required/>
+        </div>
+
+        <div style="margin-bottom: 25px;" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+          <input class="form-control" type="password" name="passwordConfirm" id="passwordConfirm"
+                 placeholder="Password confirmation"
+                 ng-model="registerData.passwordConfirm"
+                 ng-pattern="registerData.password"
+                 required/>
+          <span class="input-group-addon alert-warning"
+                ng-show="registrationForm.passwordConfirm.$dirty && registrationForm.passwordConfirm.$invalid">Passwords don't match</span>
+        </div>
+
+
+        <div style="margin-bottom: 25px;" class="form-group"
+             ng-show="registerData.action=='Register'">
+          <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+            You will receive an email to complete the registration and validation process. Be sure
+            to check your spam folders. Already registered? <a href="#/login/">Login in Here</a>
+          </div>
+        </div>
+
+
+        <div style="margin-top: 25px;" class="form-group">
+          <input class="btn btn-success" type="submit" ng-value="registerData.action"
+                 ng-disabled="registrationForm.$invalid">
+        </div>
+
+      </form>
     </div>
+  </div>
 </div>
